--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -22,7 +22,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-
+exec-once = swww-daemon & disown
 
 #############################
 ### ENVIRONMENT VARIABLES ###
