whole lotta stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -209,6 +209,7 @@ bind = SUPER_SHIFT, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, R, exec, ~/.config/scripts/launch.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
