--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor=,preferred,auto,1
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
-
+$screenshot = grim -g "$(slurp)" - | swappy -f -
 
 #################
 ### AUTOSTART ###
@@ -23,6 +23,7 @@ $menu = rofi -show drun
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = swww-daemon & disown
+exec-once = ~/.config/scripts/launch.sh # status bar
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -203,6 +204,9 @@ device {
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# Screenshots
+bind = SUPER_SHIFT, S, exec, $screenshot
+
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = SUPER_SHIFT, Q, killactive,
@@ -240,10 +244,6 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
