more config updates

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,9 @@ $screenshot = grim -g "$(slurp)" - | swappy -f -
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = swww-daemon & disown
-exec-once = ~/.config/scripts/launch.sh # status bar
+
+# Don't want waybar on Berlin
+exec-once = sh -c '[ "$(hostname)" != "berlin" ] && ~/.config/scripts/launch.sh'
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -207,13 +209,21 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Screenshots
 bind = SUPER_SHIFT, S, exec, $screenshot
 
+bind = $mainMod, R, submap,resize    
+submap = resize    
+binde=,l,resizeactive,  80 0    
+binde=,h,resizeactive, -80 0    
+binde=,k,resizeactive,   0 -80    
+binde=,j,resizeactive,   0 80    
+bind = ,escape, submap, reset    
+submap = reset
+
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = SUPER_SHIFT, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, R, exec, ~/.config/scripts/launch.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
