some things for my own sanity

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -211,12 +211,17 @@ bind = SUPER_SHIFT, S, exec, $screenshot
 
 bind = $mainMod, R, submap,resize    
 submap = resize    
-binde=,l,resizeactive,  80 0    
-binde=,h,resizeactive, -80 0    
-binde=,k,resizeactive,   0 -80    
-binde=,j,resizeactive,   0 80    
-bind = ,escape, submap, reset    
+binde=,l,resizeactive,  80 0
+binde=,h,resizeactive, -80 0
+binde=,k,resizeactive,   0 -80
+binde=,j,resizeactive,   0 80  
+bind = ,escape, submap, reset
 submap = reset
+
+bind = SUPER_SHIFT, h, swapwindow, l 
+bind = SUPER_SHIFT, l, swapwindow, r
+bind = SUPER_SHIFT, k, moveactive, u
+bind = SUPER_SHIFT, j, moveactive, d
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
