--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -3,8 +3,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,1
-
+source = ~/.config/hypr/monitors.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $terminal = kitty
