--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,64 +1,41 @@
-format = """
-[░▒▓](#a3aed2)\
-[  ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
-$directory\
-[](fg:#769ff0 bg:#394260)\
-$git_branch\
-$git_status\
-[](fg:#394260 bg:#212736)\
-$nodejs\
-$rust\
-$golang\
-$php\
-[](fg:#212736 bg:#1d2230)\
-$time\
-[ ](fg:#1d2230)\
-\n$character"""
+add_newline = true
 
+format = """
+$username@$hostname$fill$directory$git_branch$git_status
+$character
+"""
+
+# === Username / Host ===
+[username]
+show_always = true
+format = "[$user]($style)"
+style_user = "bold dimmed purple"
+
+[hostname]
+ssh_only = false
+format = "[$hostname]($style) "
+style = "dimmed #B794F4"
+
+# === Directory ===
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
-format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
+format = "[$path]($style) "
+style = "bold #C4B5FD"
 
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = " "
-"Pictures" = " "
-
+# === Git ===
 [git_branch]
-symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+symbol = " "
+format = "[$symbol$branch]($style) "
+style = "#9F7AEA"
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+style = "dimmed #A78BFA"
+format = "([$all_status$ahead_behind]($style)) "
 
-[nodejs]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+# === Prompt Symbol ===
+[character]
+success_symbol = "[❯](bold #C4B5FD)"
+error_symbol = "[❯](bold red)"
+vicmd_symbol = "[❮](bold #C4B5FD)"
 
-[rust]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[golang]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[php]
-symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
-
-[time]
-disabled = false
-time_format = "%R" # Hour:Minute Format
-style = "bg:#1d2230"
-format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
