use kitty with hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,7 +6,7 @@
 source = ~/.config/hypr/monitors.conf
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$terminal = wezterm 
+$terminal = kitty 
 $fileManager = dolphin
 $menu = rofi -show drun
 $screenshot = grim -g "$(slurp)" - | swappy -f -
