--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -148,4 +148,8 @@ automatically-unhide-macos-hidden-apps = false
     down = 'volume down'
     up = 'volume up'
     shift-down = ['volume set 0', 'mode main']
-	
+
+[[on-window-detected]]
+    if.app-name-regex-substring = 'QEMU'
+    check-further-callbacks = true
+    run = ['layout floating']
